# itdesk-moe

./: .env.example  .gitignore  CHAT_REPORT.md  COMPLETION_STATUS.md  README.md  RETENTION_IMPLEMENTATION_COMPLETE.md  RETENTION_QUICK_REFERENCE.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  tables_export.bak.xlsx  tables_export.xlsx  tables_reports.xlsx
backend/: .env.example  DELIVERY.md  Dockerfile  Dockerfile.test  IMPLEMENTATION_SUMMARY.md  RBAC.md  RBAC_QUICK_REFERENCE.md  README.md  README_RBAC.md  TESTING.md  TESTING_GUIDE.md  alembic.ini  dev_local.db  pyproject.toml  test.db
backend/alembic/: env.py
backend/app/: main.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/entrypoints/: start.sh
backend/scripts/: add_sqlite_attachment_columns.py  attachment_scanner.py  create_live_user_and_token.py  create_local_ticket.py  retention_cleanup.py  run_e2e_presign.ps1  run_migrations.py  run_presign_test.py  seed_org_units.py  seed_rbac.py  seed_roles.py  seed_users.py  verify_db_head.py  wait_for_db.py
backend/tests/: conftest.py  test_agent_assign.py  test_agent_messages.py  test_agent_queues.py  test_agent_status.py  test_ai_suggest_reply.py  test_ai_triage.py  test_alembic_heads.py  test_api.py  test_attachment_scanner.py  test_attachments_download.py  test_attachments_presign.py  test_attachments_schema.py  test_audit_logs.py  test_confidential_access.py  test_db_connection.py  test_models.py  test_org_scope.py  test_org_units.py  test_retention_cleanup.py  test_retention_redaction_export.py  test_ticket_schema.py  (+4 more)
(+59 files in other folders)
